# smc_bot

./: .env.example  .gitignore  CLAUDE.md  OPEN_QUESTIONS.md  README.md  pyproject.toml
_archived/: README.md
_archived/scripts/: test_ccxt_loader.py
_archived/tests/: test_ccxt_loader.py
backtest/: costs.py  engine_event.py  engine_vbt.py  metrics.py  walk_forward.py
config/: settings.py  strategy.py
data/calendar/: __init__.py  base.py  econ_calendar.py  econ_events.py  forexfactory_backend.py  mt5_backend.py
data/enrichment/: atr.py  time_features.py
data/ingestion/: ccxt_loader.py  (+1 more)
detectors/: __init__.py  _common.py  fvg.py  liquidity.py  order_blocks.py  structure.py  sweeps.py  swings.py
docs/: DECISIONS.md  TODO_V2.md
journal/: __init__.py  analyzer.py  trade_logger.py
live/: __init__.py  monitor.py  mt5_executor.py  paper_executor.py
risk/: __init__.py  daily_guard.py  exposure.py  position_sizer.py  risk_manager.py
scripts/: test_atr.py  test_calendar.py  test_data_validator.py  test_mt5_loader.py  test_parquet_store.py  test_time_features.py
strategy/: __init__.py  bias.py  entry_logic.py  signal.py  trade_manager.py  zone_finder.py
tests/: test_atr.py  test_calendar.py  test_ccxt_loader.py  test_daily_guard.py  test_data_validator.py  test_exposure.py  test_fvg.py  test_liquidity.py  test_mt5_loader.py  test_no_lookahead.py  test_order_blocks.py  test_paper_executor.py  test_parquet_store.py  test_position_sizer.py  test_risk_manager.py  test_signal.py  test_structure.py  test_sweeps.py  test_swings.py  test_time_features.py
(+3 files in other folders)
