[project]
name = "smc-bot"
version = "0.1.0"
description = "SMC (Smart Money Concept) trading bot - Kasper Trading methodology"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "MetaTrader5>=5.0.45",
    "tenacity>=8.2",
    "matplotlib>=3.7",
    "plotly>=5.15",
]

[project.optional-dependencies]
crypto = [
    "ccxt>=4.0",
]
backtest = [
    "vectorbt>=0.26",
    "backtesting>=0.3.3",
]
dev = [
    "pytest>=7.4",
    "hypothesis>=6.80",
    "ruff>=0.4",
    "mypy>=1.5",
    "pandas-stubs>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "data", "detectors", "strategy", "risk", "backtest", "live", "journal"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["_archived"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
exclude = ["_archived/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
norecursedirs = ["_archived", ".venv", "__pycache__"]
